--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 
 <head>
     <meta charset="utf-8">
-    <title>iSTUDIO - Interior Design Website Template Free</title>
+    <title>WOPAO</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+        <!-- Favicon -->
+    <link rel="icon" type="image/png" href="img/wopaoo/logonobg.png" sizes="32x32">
+    <link rel="apple-touch-icon" href="img/wopaoo/logonobg.png">
+    <meta name="theme-color" content="#ffffff">
+
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,31 +50,11 @@
     <div class="container-fluid sticky-top">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light border-bottom border-2 border-white">
-                <a href="index.html" class="navbar-brand">
-                    <h1>iSTUDIO</h1>
+                <a href="index.html" class="navbar-brand d-flex align-items-center">
+                    <img src="img/wopaoo/naponobg.png" alt="Logo Napol" class="logo me-2">
+                    <img src="img/wopaoo/aka1.png" alt="Logo AKA" class="logo me-2">     
+                    <h1 class="mb-0">Politeknik AKA Bogor</h1>
                 </a>
-                <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
-                    data-bs-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <div class="navbar-nav ms-auto">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="service.html" class="nav-item nav-link">Services</a>
-                        <a href="project.html" class="nav-item nav-link">Projects</a>
-                        <div class="nav-item dropdown">
-                            <a href="#!" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                            <div class="dropdown-menu bg-light mt-2">
-                                <a href="feature.html" class="dropdown-item">Features</a>
-                                <a href="team.html" class="dropdown-item">Our Team</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="404.html" class="dropdown-item">404 Page</a>
-                            </div>
-                        </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
-                    </div>
-                </div>
             </nav>
         </div>
     </div>
@@ -82,16 +66,16 @@
         <div class="container py-5">
             <div class="row g-5 align-items-center mb-5">
                 <div class="col-lg-6">
-                    <h1 class="display-1 mb-4 animated slideInRight">We Make Your <span class="text-primary">Home</span>
-                        Better</h1>
+                    <h1 class="display-1 mb-4 animated slideInRight">Kelembutan <span class="text-primary">Membawa</span>
+                        Kehangatan</h1>
                     <h5 class="d-inline-block border border-2 border-white py-3 px-5 mb-0 animated slideInRight">
-                        An Award Winning Studio Since 1990</h5>
+                        WOPAO - Created by Kelompok 2 TDK D-IV Nanoteknologi Pangan - Angkatan 2023</h5>
                 </div>
                 <div class="col-lg-6">
                     <div class="owl-carousel header-carousel animated fadeIn">
-                        <img class="img-fluid" src="img/hero-slider-1.jpg" alt="">
-                        <img class="img-fluid" src="img/hero-slider-2.jpg" alt="">
-                        <img class="img-fluid" src="img/hero-slider-3.jpg" alt="">
+                        <img class="img-fluid" src="img/wopaoo/coklat2.png" alt="">
+                        <img class="img-fluid" src="img/wopaoo/matcha2.png" alt="">
+                        <img class="img-fluid" src="img/wopaoo/saltedegg2.png" alt="">
                     </div>
                 </div>
             </div>
@@ -134,8 +118,8 @@
     <!-- Hero End -->
 
 
-    <!-- About Start -->
-    <div class="container-fluid py-5">
+                                                                    <!-- About Start -->
+    <!-- <div class="container-fluid py-5">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6">
@@ -183,12 +167,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- About End -->
 
 
     <!-- Feature Start -->
-    <div class="container-fluid py-5">
+    <!-- <div class="container-fluid py-5">
         <div class="container">
             <div class="text-center wow fadeIn" data-wow-delay="0.1s">
                 <h1 class="mb-5">Why People <span class="text-uppercase text-primary bg-light px-2">Choose Us</span>
@@ -233,12 +217,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Feature End -->
 
 
     <!-- Project Start -->
-    <div class="container-fluid mt-5">
+    <!-- <div class="container-fluid mt-5">
         <div class="container mt-5">
             <div class="row g-0">
                 <div class="col-lg-5 wow fadeIn" data-wow-delay="0.1s">
@@ -308,12 +292,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Project End -->
 
 
     <!-- Service Start -->
-    <div class="container-fluid py-5">
+    <!-- <div class="container-fluid py-5">
         <div class="container py-5">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-5 wow fadeIn" data-wow-delay="0.1s">
@@ -381,22 +365,22 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Service End -->
 
 
     <!-- Team Start -->
     <div class="container-fluid bg-light py-5">
         <div class="container py-5">
-            <h1 class="mb-5">Our Professional <span class="text-uppercase text-primary bg-light px-2">Designers</span>
+            <h1 class="mb-5">Kelompok 2<span class="text-uppercase text-primary bg-light px-2">"MEMBER"</span>
             </h1>
             <div class="row g-4">
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.1s">
                     <div class="team-item position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
+                        <img class="img-fluid w-100" src="img/wopaoo/cecey.png" alt="">
                         <div class="team-overlay">
-                            <small class="mb-2">Architect</small>
-                            <h4 class="lh-base text-light">Boris Johnson</h4>
+                            <small class="mb-2">4v0cadish</small>
+                            <h4 class="lh-base text-light">Azzahra Sadrina N.</h4>
                             <div class="d-flex justify-content-center">
                                 <a class="btn btn-outline-primary btn-sm-square border-2 me-2" href="#!">
                                     <i class="fab fa-facebook-f"></i>
@@ -416,10 +400,10 @@
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
                     <div class="team-item position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
+                        <img class="img-fluid w-100" src="img/wopaoo/falahh.png" alt="">
                         <div class="team-overlay">
-                            <small class="mb-2">Architect</small>
-                            <h4 class="lh-base text-light">Donald Pakura</h4>
+                            <small class="mb-2">pinkyy</small>
+                            <h4 class="lh-base text-light">Falah Zikra</h4>
                             <div class="d-flex justify-content-center">
                                 <a class="btn btn-outline-primary btn-sm-square border-2 me-2" href="#!">
                                     <i class="fab fa-facebook-f"></i>
@@ -439,10 +423,10 @@
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.5s">
                     <div class="team-item position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
+                        <img class="img-fluid w-100" src="img/wopaoo/iffah.png" alt="">
                         <div class="team-overlay">
-                            <small class="mb-2">Architect</small>
-                            <h4 class="lh-base text-light">Bradley Gordon</h4>
+                            <small class="mb-2">Lajang</small>
+                            <h4 class="lh-base text-light">Iffah Zahidah</h4>
                             <div class="d-flex justify-content-center">
                                 <a class="btn btn-outline-primary btn-sm-square border-2 me-2" href="#!">
                                     <i class="fab fa-facebook-f"></i>
@@ -462,10 +446,10 @@
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.7s">
                     <div class="team-item position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="img/team-4.jpg" alt="">
+                        <img class="img-fluid w-100" src="img/wopaoo/kokushibo.png" alt="">
                         <div class="team-overlay">
-                            <small class="mb-2">Architect</small>
-                            <h4 class="lh-base text-light">Alexander Bell</h4>
+                            <small class="mb-2">jokotim</small>
+                            <h4 class="lh-base text-light">M. Fakhri Al-Fathi</h4>
                             <div class="d-flex justify-content-center">
                                 <a class="btn btn-outline-primary btn-sm-square border-2 me-2" href="#!">
                                     <i class="fab fa-facebook-f"></i>
@@ -490,7 +474,7 @@
 
 
     <!-- Testimonial Start -->
-    <div class="container-xxl py-5">
+    <!-- <div class="container-xxl py-5">
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-9">
@@ -509,7 +493,7 @@
                                             stet no labore lorem sit. Sanctus clita duo justo et tempor eirmod magna
                                             dolore erat
                                             amet</p>
-                                        <h5 class="mb-0">Boris Johnson</h5>
+                                        <h5 class="mb-0">Azzahra Sadrina Nadzifa</h5>
                                     </div>
                                 </div>
                             </div>
@@ -556,12 +540,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Testimonial End -->
 
 
     <!-- Newsletter Start -->
-    <div class="container-fluid bg-primary newsletter p-0">
+    <!-- <div class="container-fluid bg-primary newsletter p-0">
         <div class="container p-0">
             <div class="row g-0 align-items-center">
                 <div class="col-md-5 ps-lg-0 text-start wow fadeIn" data-wow-delay="0.2s">
@@ -582,7 +566,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Newsletter End -->
 
 
@@ -592,46 +576,20 @@
             <div class="row g-5">
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.1s">
                     <a href="index.html" class="d-inline-block mb-3">
-                        <h1 class="text-white">iSTUDIO</h1>
+                        <h1 class="text-white">D-IV NTP</h1>
                     </a>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum et tempor sit. Aliqu diam
-                        amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus
-                        clita duo justo et tempor</p>
+                    <p class="mb-0">Sebagai mahasiswa yang menekuni bidang nanomaterial dengan fokus pada inovasi pangan, mahasiswa D-IV mengembangkan produk pangan yang unggul, dimulai dari optimalisasi bahan pangan hingga rancangan kemasan yang cerdas dan berkelanjutan.
+                    </p>
                 </div>
-                <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
-                    <h5 class="text-white mb-4">Get In Touch</h5>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
-                    <div class="d-flex pt-2">
-                        <a class="btn btn-outline-primary btn-square border-2 me-2" href="#!"><i
-                                class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-primary btn-square border-2 me-2" href="#!"><i
-                                class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-primary btn-square border-2 me-2" href="#!"><i
-                                class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-primary btn-square border-2 me-2" href="#!"><i
-                                class="fab fa-instagram"></i></a>
-                        <a class="btn btn-outline-primary btn-square border-2 me-2" href="#!"><i
-                                class="fab fa-linkedin-in"></i></a>
-                    </div>
+                <!-- <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
+                    <img src="img/wopaoo/kokushibo.png" alt="Logo AKA" class="logo me-2">
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.5s">
-                    <h5 class="text-white mb-4">Popular Link</h5>
-                    <a class="btn btn-link" href="#!">About Us</a>
-                    <a class="btn btn-link" href="#!">Contact Us</a>
-                    <a class="btn btn-link" href="#!">Privacy Policy</a>
-                    <a class="btn btn-link" href="#!">Terms & Condition</a>
-                    <a class="btn btn-link" href="#!">Career</a>
+
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.7s">
-                    <h5 class="text-white mb-4">Our Services</h5>
-                    <a class="btn btn-link" href="#!">Interior Design</a>
-                    <a class="btn btn-link" href="#!">Project Planning</a>
-                    <a class="btn btn-link" href="#!">Renovation</a>
-                    <a class="btn btn-link" href="#!">Implement</a>
-                    <a class="btn btn-link" href="#!">Landscape Design</a>
-                </div>
+                    
+                </div> -->
             </div>
         </div>
         <div class="container wow fadeIn" data-wow-delay="0.1s">
@@ -647,12 +605,6 @@
                         <a class="border-bottom" href="https://themewagon.com" target="_blank">ThemeWagon</a>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        <div class="footer-menu">
-                            <a href="#!">Home</a>
-                            <a href="#!">Cookies</a>
-                            <a href="#!">Help</a>
-                            <a href="#!">FAQs</a>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -673,8 +625,19 @@
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
+    <script>
+        window.addEventListener('scroll', function() {
+            const navbar = document.querySelector('.navbar');
+            if (window.scrollY > 50) {
+                navbar.classList.add('navbar-scrolled');
+            } else {
+                navbar.classList.remove('navbar-scrolled');
+            }
+        });
+    </script>
+    
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
 
-</html>
+</html> -->
