--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <!-- Favicon -->
         <!-- Favicon -->
-    <link rel="icon" type="image/png" href="img/wopaoo/logonobg.png" sizes="32x32">
-    <link rel="apple-touch-icon" href="img/wopaoo/logonobg.png">
+    <link rel="icon" type="image/png" href="img/logonobg.png" sizes="32x32">
+    <link rel="apple-touch-icon" href="img/logonobg.png">
     <meta name="theme-color" content="#ffffff">
 
 
@@ -51,8 +51,8 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light border-bottom border-2 border-white">
                 <a href="index.html" class="navbar-brand d-flex align-items-center">
-                    <img src="img/wopaoo/naponobg.png" alt="Logo Napol" class="logo me-2">
-                    <img src="img/wopaoo/aka1.png" alt="Logo AKA" class="logo me-2">     
+                    <img src="img/naponobg.png" alt="Logo Napol" class="logo me-2">
+                    <img src="img/aka1.png" alt="Logo AKA" class="logo me-2">     
                     <h1 class="mb-0">Politeknik AKA Bogor</h1>
                 </a>
             </nav>
@@ -73,9 +73,9 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="owl-carousel header-carousel animated fadeIn">
-                        <img class="img-fluid" src="img/wopaoo/coklat2.png" alt="">
-                        <img class="img-fluid" src="img/wopaoo/matcha2.png" alt="">
-                        <img class="img-fluid" src="img/wopaoo/saltedegg2.png" alt="">
+                        <img class="img-fluid" src="img/coklat2.png" alt="">
+                        <img class="img-fluid" src="img/matcha2.png" alt="">
+                        <img class="img-fluid" src="img/saltedegg2.png" alt="">
                     </div>
                 </div>
             </div>
@@ -377,7 +377,7 @@
             <div class="row g-4">
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.1s">
                     <div class="team-item position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="img/wopaoo/cecey.png" alt="">
+                        <img class="img-fluid w-100" src="img/cecey.png" alt="">
                         <div class="team-overlay">
                             <small class="mb-2">4v0cadish</small>
                             <h4 class="lh-base text-light">Azzahra Sadrina N.</h4>
@@ -400,7 +400,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
                     <div class="team-item position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="img/wopaoo/falahh.png" alt="">
+                        <img class="img-fluid w-100" src="img/falahh.png" alt="">
                         <div class="team-overlay">
                             <small class="mb-2">pinkyy</small>
                             <h4 class="lh-base text-light">Falah Zikra</h4>
@@ -423,7 +423,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.5s">
                     <div class="team-item position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="img/wopaoo/iffah.png" alt="">
+                        <img class="img-fluid w-100" src="img/iffah.png" alt="">
                         <div class="team-overlay">
                             <small class="mb-2">Lajang</small>
                             <h4 class="lh-base text-light">Iffah Zahidah</h4>
@@ -446,7 +446,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.7s">
                     <div class="team-item position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="img/wopaoo/kokushibo.png" alt="">
+                        <img class="img-fluid w-100" src="img/kokushibo.png" alt="">
                         <div class="team-overlay">
                             <small class="mb-2">jokotim</small>
                             <h4 class="lh-base text-light">M. Fakhri Al-Fathi</h4>
@@ -582,7 +582,7 @@
                     </p>
                 </div>
                 <!-- <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
-                    <img src="img/wopaoo/kokushibo.png" alt="Logo AKA" class="logo me-2">
+                    <img src="img/kokushibo.png" alt="Logo AKA" class="logo me-2">
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.5s">
 
